--- a/styles.css
+++ b/styles.css
@@ -226,8 +226,8 @@
 
   #button:before {
     content: "";
-    width: 80px;
-    height: 80px;
+    width: 90px;
+    height: 90px;
     display: block;
     z-index: -2;
     position: absolute;
@@ -263,6 +263,8 @@
     display: block;
     width: 8px;
     height: 8px;
+    position: absolute;
+    top: 175px;
     background-color: #e20000;
     box-shadow: inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5), 0px 0px 3px 2px rgba(226, 0, 0, 0.5);
     border-radius: 4px;
