--- a/styles.scss
+++ b/styles.scss
@@ -231,8 +231,8 @@ align-items: center;
 }
 #button:before {
 	content: "";
-	width: 80px;
-	height: 80px;
+	width: 90px;
+	height: 90px;
 	display: block;
 	z-index: -2;
 	position: absolute;
@@ -271,7 +271,9 @@ align-items: center;
 #button + .light {
 	display: block;
 	width: 8px;
-	height: 8px;
+  height: 8px;
+  position: absolute;
+  top: 175px;
 	background-color: rgb(226,0,0);
 	box-shadow: inset 0px 1px 0px 0px rgba(250,250,250,0.5),
 				0px 0px 3px 2px rgba(226,0,0,0.5);
@@ -831,6 +833,8 @@ fieldset {
 .languages-container {
     color: white;
 }
+
+
 
 } 
 
