--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@
     align-items: center;
     flex-direction: column;
     background: url(http://subtlepatterns.com/patterns/micro_carbon.png);
-    border-radius: 8px;
+    border-radius: 50px;
   }
 
   .About {
@@ -138,7 +138,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-radius: 8px;
+    background: url(http://subtlepatterns.com/patterns/micro_carbon.png);
+    border-radius: 30px;
     text-align: center;
   }
 
@@ -147,7 +148,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-radius: 8px;
+    border-radius: 30px;
   }
 
   .Experience {
@@ -166,18 +167,10 @@
     border-radius: 8px;
   }
 
-  /* Images */
-  .circuit-city {
-    margin: 80px;
-    border-radius: 8px;
-    opacity: 0.6;
-    align-items: center;
-  }
-
   .me {
-    margin: 40px;
-    border-radius: 35%;
-    height: 150px;
+    margin: 30px;
+    border-radius: 30%;
+    height: 225px;
     opacity: 0.6;
     align-items: center;
   }
