--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,7 @@
     background: url(http://subtlepatterns.com/patterns/micro_carbon.png);
     border-radius: 30px;
     text-align: center;
+    padding: 20px;
   }
 
   .Projects {
@@ -180,6 +181,8 @@
     border-radius: 8px;
     opacity: 0.6;
     align-items: center;
+    z-index: -1;
+    position: relative;
   }
 
   :active, :focus {
@@ -530,6 +533,7 @@
 
   .slider {
     overflow-x: scroll;
+    max-width: 300%;
   }
 
   .holder {
@@ -542,6 +546,18 @@
     height: 500px;
     position: relative;
     background-position: -100px 0;
+  }
+
+  .slider-stopper {
+    position: absolute;
+    top: 1px;
+    right: 20px;
+    background: #ac0000;
+    color: white;
+    padding: 3px 8px;
+    font-size: 10px;
+    text-transform: uppercase;
+    z-index: 1000;
   }
 
   .temp {
