--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,42 @@ canvas {
   display: block;
 }
 
-/* The image used */
+#top, #bottom, #left, #right {
+  background: #FFF;
+  position: fixed;
+}
+
+#left, #right {
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  border-radius: 2px;
+}
+
+#left {
+  left: 0;
+}
+
+#right {
+  right: 0;
+}
+
+#top, #bottom {
+  left: 0;
+  right: 0;
+  height: 1px;
+  border-radius: 2px;
+}
+
+#top {
+  top: 0;
+}
+
+#bottom {
+  bottom: 0;
+}
+
+/* The image used  for binary animation*/
 #canvas {
   width: 100%;
   height: 100%;
@@ -36,7 +71,7 @@ canvas {
   display: block;
 }
 
-.line-1 {
+.line {
   position: relative;
   top: 50%;
   width: 24em;
@@ -130,12 +165,16 @@ section .card {
   margin-left: -130px;
 }
 
-.card-author {
+.card-picture {
   position: relative;
   display: grid;
   grid-template-columns: 75px 1fr;
   align-items: center;
   margin: 3rem 0 0;
+  max-width: 100%;
+  height: 100px;
+  bottom: 95px;
+  border-radius: 50%;
 }
 
 .author-avatar img {
@@ -435,6 +474,7 @@ section .card {
     height: 225px;
     opacity: 0.6;
     align-items: center;
+    max-width: 100%;
   }
 
   .Birmingham {
@@ -784,12 +824,12 @@ section .card {
       opacity: 1;
     }
   }
-  #contact input[type=text],
-#contact input[type=email],
-#contact input[type=tel],
-#contact input[type=url],
-#contact textarea,
-#contact button[type=submit] {
+  form #contact input[type=text],
+form #contact input[type=email],
+form #contact input[type=tel],
+form #contact input[type=url],
+form #contact textarea,
+form #contact button[type=submit] {
     font: 400 12px/16px "Fira Sans", Helvetica, Arial, sans-serif;
   }
 
@@ -909,10 +949,6 @@ section .card {
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
 }
 
 .gallery {
