--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,30 @@
 body {background: #000;}
 canvas {display: block;} 
 
-/* The image used */
+
+
+#top, #bottom, #left, #right {
+  // background: #F3340d;
+  background: #FFF;
+	position: fixed;
+	}
+	#left, #right {
+		top: 0; bottom: 0;
+    width: 1px;
+    border-radius: 2px;
+		}
+		#left { left: 0; }
+		#right { right: 0; }
+		
+	#top, #bottom {
+		left: 0; right: 0;
+    height: 1px;
+    border-radius:2px;
+		}
+		#top { top: 0; }
+		#bottom { bottom: 0; }
+
+/* The image used  for binary animation*/
 #canvas  {
   width: 100%;
   height: 100%;
@@ -28,7 +51,7 @@ font-size: #fff;
 
   }   
 
-  .line-1{
+  .line{
     position: relative;
     top: 50%;  
     width: 24em;
@@ -122,12 +145,16 @@ font-size: #fff;
   margin-left: -130px;
 }
 
-.card-author {
+.card-picture{
   position: relative;
   display: grid;
   grid-template-columns: 75px 1fr;
   align-items: center;
   margin: 3rem 0 0;
+   max-width: 100%;
+   height: 100px;
+   bottom: 95px;
+   border-radius: 50%;
 }
 
 .author-avatar img {
@@ -204,6 +231,8 @@ font-size: #fff;
   background-clip: text;
   border-color: white;
 }
+
+
 // Look at Media Queries! 
   /* For mobile phones: */
 [class*="col-"] {
@@ -357,6 +386,7 @@ font-size: #fff;
   background: url(http://subtlepatterns.com/patterns/micro_carbon.png);
   border-radius: 50px;
  margin-bottom: 200px;
+ 
   }
 
 .About { 
@@ -406,6 +436,7 @@ align-items: center;
     height: 225px;
     opacity: 0.6;
     align-items: center;
+    max-width: 100%;
   } 
   .Birmingham {
     margin: 40px;
@@ -707,7 +738,7 @@ span.flickering-3 {
 
 
 // Contact form
-
+form{
 #contact input[type="text"],
 #contact input[type="email"],
 #contact input[type="tel"],
@@ -715,8 +746,9 @@ span.flickering-3 {
 #contact textarea,
 #contact button[type="submit"] {
   font: 400 12px/16px "Fira Sans", Helvetica, Arial, sans-serif;
-}
+  }
 
+}
 #contact {
   
   padding: 25px;
@@ -845,7 +877,7 @@ fieldset {
   box-sizing: border-box;
 }
 
-body { font-family: sans-serif; }
+
 
 .gallery {
   background: #EEE;
