--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,29 @@
 body {background: #000;}
 canvas {display: block;} 
 
+@media all and (min-width: 1001px) {
+  #sidebar ul li a:after {
+    content: " (" attr(data-email) ")";
+    font-size: 11px;
+    font-style: italic;
+    color: #666;
+  }
+}
 
+@media all and (max-width: 1000px) and (min-width: 700px) {
+  #sidebar ul li a:before {
+    content: "Email: ";
+    font-style: italic;
+    color: #666;
+  }
+}
+
+@media all and (max-width: 699px) and (min-width: 520px), (min-width: 1151px) {
+  #sidebar ul li a {
+    padding-left: 21px;
+    background: url(../images/email.png) left center no-repeat;
+  }
+}
 
 #top, #bottom, #left, #right {
   // background: #F3340d;
@@ -11,7 +33,7 @@ canvas {display: block;}
 	}
 	#left, #right {
 		top: 0; bottom: 0;
-    width: 1px;
+    width: 2px;
     border-radius: 2px;
 		}
 		#left { left: 0; }
@@ -19,7 +41,7 @@ canvas {display: block;}
 		
 	#top, #bottom {
 		left: 0; right: 0;
-    height: 1px;
+    height: 2px;
     border-radius:2px;
 		}
 		#top { top: 0; }
@@ -233,27 +255,6 @@ font-size: #fff;
 }
 
 
-// Look at Media Queries! 
-  /* For mobile phones: */
-[class*="col-"] {
-  width: 100%;
-}
-
-  @media only screen and (min-width: 600px) {
-    /* For tablets: */
-    .col-s-1 {width: 8.33%;}
-    .col-s-2 {width: 16.66%;}
-    .col-s-3 {width: 25%;}
-    .col-s-4 {width: 33.33%;}
-    .col-s-5 {width: 41.66%;}
-    .col-s-6 {width: 50%;}
-    .col-s-7 {width: 58.33%;}
-    .col-s-8 {width: 66.66%;}
-    .col-s-9 {width: 75%;}
-    .col-s-10 {width: 83.33%;}
-    .col-s-11 {width: 91.66%;}
-    .col-s-12 {width: 100%;}
-  }
 
 
 /* Nav and logo */
@@ -436,7 +437,7 @@ align-items: center;
     height: 225px;
     opacity: 0.6;
     align-items: center;
-    max-width: 100%;
+    max-width: 60%;
   } 
   .Birmingham {
     margin: 40px;
