--- a/styles.css
+++ b/styles.css
@@ -27,10 +27,28 @@ canvas {
     color: #666;
   }
 }
-@media all and (max-width: 699px) and (min-width: 520px), (min-width: 1151px) {
-  #sidebar ul li a {
-    padding-left: 21px;
-    background: url(../images/email.png) left center no-repeat;
+@media (max-width: 767px) {
+  .portfolio img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+@media (min-width: 768px) {
+  .landing img {
+    max-width: 240px;
+    max-height: 240px;
+  }
+}
+@media (min-width: 992px) {
+  .landing img {
+    max-width: 314px;
+    max-height: 314px;
+  }
+}
+@media (min-width: 1200px) {
+  .landing img {
+    max-width: 380px;
+    max-height: 380px;
   }
 }
 #top, #bottom, #left, #right {
@@ -94,7 +112,6 @@ canvas {
 
 .line {
   position: relative;
-  top: 50%;
   width: 24em;
   margin: 0 auto;
   border-right: 2px solid rgba(255, 255, 255, 0.75);
@@ -194,8 +211,8 @@ section .card {
   margin: 3rem 0 0;
   max-width: 100%;
   height: 100px;
-  bottom: 95px;
-  border-radius: 50%;
+  bottom: 90px;
+  border-radius: 75%;
 }
 
 .author-avatar img {
