--- a/styles.scss
+++ b/styles.scss
@@ -19,10 +19,31 @@ canvas {display: block;}
   }
 }
 
-@media all and (max-width: 699px) and (min-width: 520px), (min-width: 1151px) {
-  #sidebar ul li a {
-    padding-left: 21px;
-    background: url(../images/email.png) left center no-repeat;
+@media (max-width:767px) {
+  .portfolio img {
+      max-width: 100%;
+      max-height: 100%;
+  }
+}
+
+@media (min-width:768px) {
+  .landing img {
+      max-width: 240px;
+      max-height: 240px;
+  }
+}
+
+@media (min-width:992px) {
+  .landing img {
+      max-width: 314px;
+      max-height: 314px;
+  }
+}
+
+@media (min-width:1200px) {
+  .landing img {
+      max-width: 380px;
+      max-height: 380px;
   }
 }
 
@@ -73,9 +94,9 @@ font-size: #fff;
 
   }   
 
-  .line{
+  .line {
     position: relative;
-    top: 50%;  
+    // top: 50%;  
     width: 24em;
     margin: 0 auto;
     border-right: 2px solid rgba(255,255,255,.75);
@@ -92,7 +113,7 @@ font-size: #fff;
   animation: typewriter 4s steps(44) 1s 1 normal both,
              blinkTextCursor 500ms steps(44) infinite normal;
 }
-@keyframes typewriter{
+@keyframes typewriter {
   from{width: 0;}
   to{width: 24em;}
 }
@@ -175,8 +196,8 @@ font-size: #fff;
   margin: 3rem 0 0;
    max-width: 100%;
    height: 100px;
-   bottom: 95px;
-   border-radius: 50%;
+   bottom: 90px;
+   border-radius: 75%;
 }
 
 .author-avatar img {
