--- a/styles.scss
+++ b/styles.scss
@@ -47,6 +47,17 @@ canvas {display: block;}
   }
 }
 
+@media screen and ( max-width: 1024px ) {
+  img.responsive { width: 200px; }
+  }
+  @media screen and ( min-width:1025px ) and ( max-width: 1280px ) {
+  img.responsive { width: 300px; }
+  }
+  @media screen and ( min-width: 1081px ) {
+  img.responsive { width: 400px; }
+  }
+  img.responsive { height: auto; }
+
 #top, #bottom, #left, #right {
   // background: #F3340d;
   background: #FFF;
@@ -194,10 +205,19 @@ font-size: #fff;
   grid-template-columns: 75px 1fr;
   align-items: center;
   margin: 3rem 0 0;
-   max-width: 100%;
-   height: 100px;
-   bottom: 90px;
-   border-radius: 75%;
+  //  max-width: 100%;
+  //  height: 100px;
+  //  bottom: 90px;
+}
+
+.card-picture img {
+  display: block;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    filter: grayscale(100%);
+    margin: 16px 10px;
+    max-width: 100%;
 }
 
 .author-avatar img {
@@ -452,7 +472,7 @@ align-items: center;
   // background: url(http://subtlepatterns.com/patterns/micro_carbon.png);
 // }   
 
-  .me {
+#me {
     margin: 30px;
     border-radius: 30%;
     height: 225px;
@@ -460,7 +480,7 @@ align-items: center;
     align-items: center;
     max-width: 60%;
   } 
-  .Birmingham {
+  #Birmingham {
     margin: 40px;
     border-radius: 8px;
     opacity: 0.6;
