--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,25 @@ canvas {
     max-height: 380px;
   }
 }
+@media screen and (max-width: 1024px) {
+  img.responsive {
+    width: 200px;
+  }
+}
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
+  img.responsive {
+    width: 300px;
+  }
+}
+@media screen and (min-width: 1081px) {
+  img.responsive {
+    width: 400px;
+  }
+}
+img.responsive {
+  height: auto;
+}
+
 #top, #bottom, #left, #right {
   background: #FFF;
   position: fixed;
@@ -209,10 +228,16 @@ section .card {
   grid-template-columns: 75px 1fr;
   align-items: center;
   margin: 3rem 0 0;
+}
+
+.card-picture img {
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  filter: grayscale(100%);
+  margin: 16px 10px;
   max-width: 100%;
-  height: 100px;
-  bottom: 90px;
-  border-radius: 75%;
 }
 
 .author-avatar img {
@@ -451,7 +476,7 @@ section .card {
     margin-bottom: 200px;
   }
 
-  .me {
+  #me {
     margin: 30px;
     border-radius: 30%;
     height: 225px;
@@ -460,7 +485,7 @@ section .card {
     max-width: 60%;
   }
 
-  .Birmingham {
+  #Birmingham {
     margin: 40px;
     border-radius: 8px;
     opacity: 0.6;
