--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ canvas {
     max-height: 380px;
   }
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
   img.responsive {
     width: 200px;
   }
@@ -848,12 +848,12 @@ section .card {
       opacity: 1;
     }
   }
-  #contact #contact input[type=text],
-#contact #contact input[type=email],
-#contact #contact input[type=tel],
-#contact #contact input[type=url],
-#contact #contact textarea,
-#contact #contact button[type=submit] {
+  form #contact input[type=text],
+form #contact input[type=email],
+form #contact input[type=tel],
+form #contact input[type=url],
+form #contact textarea,
+form #contact button[type=submit] {
     font: 400 12px/16px "Fira Sans", Helvetica, Arial, sans-serif;
   }
 
