--- a/styles.css
+++ b/styles.css
@@ -495,10 +495,10 @@ section .card {
   #me {
     margin: 30px;
     border-radius: 30%;
-    height: 225px;
+    height: 200px;
+    width: 200px;
     opacity: 0.6;
     align-items: center;
-    max-width: 100%;
   }
 
   #Birmingham {
