--- a/styles.scss
+++ b/styles.scss
@@ -479,10 +479,10 @@ align-items: center;
 #me {
     margin: 30px;
     border-radius: 30%;
-    height: 225px;
+    height: 200px;
+    width: 200px;
     opacity: 0.6;
     align-items: center;
-    max-width: 100%;
   } 
   #Birmingham {
     margin: 40px;
