Edited project card details for iphone Calculator

--- a/styles.css
+++ b/styles.css
@@ -997,3 +997,15 @@ form #contact button[type=submit] {
   background: #8C8;
   counter-increment: gallery-cell;
 }
+
+#graph li {
+  position: absolute;
+  list-style: none;
+  background: lightblue;
+  width: 40px;
+  text-align: center;
+  border: 1px solid black;
+  visibility: hidden;
+  background-image: url(bar-shaded.png);
+  background-repeat: repeat-y;
+}
