--- a/styles.css
+++ b/styles.css
@@ -94,8 +94,10 @@ div.responsive {
 #left, #right {
   top: 0;
   bottom: 0;
-  width: 2px;
-  border-radius: 2px;
+  width: 5px;
+  border-style: solid;
+  border-width: medium;
+  border-radius: 5px;
 }
 
 #left {
@@ -109,8 +111,10 @@ div.responsive {
 #top, #bottom {
   left: 0;
   right: 0;
-  height: 2px;
-  border-radius: 2px;
+  height: 5px;
+  border-style: solid;
+  border-width: medium;
+  border-radius: 5px;
 }
 
 #top {
@@ -407,11 +411,9 @@ section .card {
 .navbar__menuitem {
     font-family: "Fira Sans", sans-serif;
     display: inline-block;
-    background: url(http://subtlepatterns.com/patterns/micro_carbon.png);
   }
 
   .navbar__menuitem:hover {
-    background: url(http://subtlepatterns.com/patterns/micro_carbon.png);
     box-shadow: inset 0 -5px 0 0 #FFF;
     border-left-color: transparent;
   }
@@ -446,9 +448,9 @@ section .card {
   .landing {
     display: flex;
     align-items: flex-start;
+    flex-shrink: -1;
     align-items: center;
     flex-direction: column;
-    background: url(http://subtlepatterns.com/patterns/micro_carbon.png);
     border-radius: 50px;
     margin-bottom: 200px;
   }
@@ -563,21 +565,21 @@ section .card {
     display: block;
     z-index: -2;
     position: absolute;
-    background-color: #1a1b1d;
+    background-color: black;
     left: -5px;
     top: -2px;
     border-radius: 40px;
-    box-shadow: 0px 1px 0px 0px rgba(250, 250, 250, 0.1), inset 0px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1), inset 0px 1px 2px rgba(0, 0, 0, 0.5);
   }
 
   #button:active {
-    box-shadow: 0px 0px 0px 0px #222222, 0px 3px 7px 0px #111111, inset 0px 1px 1px 0px rgba(250, 250, 250, 0.2), inset 0px -10px 35px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 0px 0px #222222, 0px 3px 7px 0px #111111, inset 0px 1px 1px 0px rgba(7, 7, 7, 0.2), inset 0px -10px 35px 5px rgba(0, 0, 0, 0.5);
     background-color: #53575d;
     top: 3px;
   }
 
   #button.on {
-    box-shadow: 0px 0px 0px 0px #222222, 0px 3px 7px 0px #111111, inset 0px 1px 1px 0px rgba(250, 250, 250, 0.2), inset 0px -10px 35px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 0px 0px #222222, 0px 3px 7px 0px #111111, inset 0px 1px 1px 0px rgba(7, 7, 7, 0.2), inset 0px -10px 35px 5px rgba(0, 0, 0, 0.5);
     background-color: #53575d;
     top: 3px;
     color: #fff;
@@ -587,7 +589,7 @@ section .card {
   #button:active:before, a.on:before {
     top: -5px;
     background-color: #1a1b1d;
-    box-shadow: 0px 1px 0px 0px rgba(250, 250, 250, 0.1), inset 0px 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1), inset 0px 1px 2px rgba(0, 0, 0, 0.5);
   }
 
   /* Styling the Indicator light */
@@ -859,12 +861,12 @@ section .card {
       opacity: 1;
     }
   }
-  form #contact input[type=text],
-form #contact input[type=email],
-form #contact input[type=tel],
-form #contact input[type=url],
-form #contact textarea,
-form #contact button[type=submit] {
+  .contact form #contact input[type=text],
+.contact form #contact input[type=email],
+.contact form #contact input[type=tel],
+.contact form #contact input[type=url],
+.contact form #contact textarea,
+.contact form #contact button[type=submit] {
     font: 400 12px/16px "Fira Sans", Helvetica, Arial, sans-serif;
   }
 
@@ -996,16 +998,4 @@ form #contact button[type=submit] {
   margin-right: 10px;
   background: #8C8;
   counter-increment: gallery-cell;
-}
-
-#graph li {
-  position: absolute;
-  list-style: none;
-  background: lightblue;
-  width: 40px;
-  text-align: center;
-  border: 1px solid black;
-  visibility: hidden;
-  background-image: url(bar-shaded.png);
-  background-repeat: repeat-y;
 }
