--- a/styles.css
+++ b/styles.css
@@ -91,40 +91,6 @@ div.responsive {
   position: fixed;
 }
 
-#left, #right {
-  top: 0;
-  bottom: 0;
-  width: 5px;
-  border-style: solid;
-  border-width: medium;
-  border-radius: 5px;
-}
-
-#left {
-  left: 0;
-}
-
-#right {
-  right: 0;
-}
-
-#top, #bottom {
-  left: 0;
-  right: 0;
-  height: 5px;
-  border-style: solid;
-  border-width: medium;
-  border-radius: 5px;
-}
-
-#top {
-  top: 0;
-}
-
-#bottom {
-  bottom: 0;
-}
-
 /* The image used  for binary animation*/
 #canvas {
   width: 100%;
@@ -443,6 +409,12 @@ section .card {
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #fff;
+  }
+
+  .body-style {
+    border-color: white;
+    border-style: solid;
+    border-width: medium;
   }
 
   .landing {
