--- a/styles.scss
+++ b/styles.scss
@@ -64,26 +64,27 @@ canvas {display: block;}
   img.responsive { height: auto; }
   div.responsive { height: auto; }
 
-#top, #bottom, #left, #right {
-  // background: #F3340d;
-  background: #FFF;
-  position: fixed;
-	}
-	// #left, #right {
-	// 	top: 0; bottom: 0;
-  //   width: 5px;
-  //   border-radius: 5px;
-	// 	}
-	// 	#left { left: 0; }
-	// 	#right { right: 0; }
+// #top, #bottom, #left, #right {
+//   // background: #F3340d;
+//   background: #FFF;
+//   position: fixed;
+// 	}
+// 	#left, #right {
+// 		top: 0; bottom: 0;
+//     width: 5px;
+//     border-radius: 5px;
+// 		}
+// 		#left { left: 0; }
+// 		#right { right: 0; }
 		
-	// #top, #bottom {
-	// 	left: 0; right: 0;
-  //   height: 5px;
-  //   border-radius:5px;
-	// 	}
-	// 	#top { top: 0; }
-	// 	#bottom { bottom: 0; }
+// 	#top, #bottom {
+// 		left: 0; right: 0;
+//     height: 5px;
+
+//     border-radius:5px;
+// 		}
+// 		#top { top: 0; }
+// 		#bottom { bottom: 0; }
 
 /* The image used  for binary animation*/
 #canvas  {
@@ -594,7 +595,7 @@ align-items: center;
 	width: 8px;
   height: 8px;
   position: absolute;
-  top: 175px;
+  top: 178px;
 	background-color: rgb(226,0,0);
 	box-shadow: inset 0px 1px 0px 0px rgba(250,250,250,0.5),
 				0px 0px 3px 2px rgba(226,0,0,0.5);
