--- a/styles.scss
+++ b/styles.scss
@@ -544,7 +544,8 @@ align-items: center;
 	border-radius: 35px;
 	text-align: center;
 	line-height: 79px;
-	background-color: rgb(83,87,93);
+  background-color: rgb(83,87,93);
+  cursor: pointer;
 
 	transition: color 350ms ease, text-shadow 350ms;
 		-o-transition: color 350ms ease, text-shadow 350ms;
@@ -595,7 +596,7 @@ align-items: center;
 	width: 8px;
   height: 8px;
   position: absolute;
-  top: 178px;
+  top: 179px;
 	background-color: rgb(226,0,0);
 	box-shadow: inset 0px 1px 0px 0px rgba(250,250,250,0.5),
 				0px 0px 3px 2px rgba(226,0,0,0.5);
