--- a/styles.scss
+++ b/styles.scss
@@ -487,8 +487,8 @@ align-items: center;
 #me {
     margin: 30px;
     border-radius: 20%;
-    height: 200px;
-    width: 175px;
+    height: 25%;
+    width: 25%;
     opacity: 0.6;
     align-items: center;
   } 
