--- a/styles.css
+++ b/styles.css
@@ -463,9 +463,9 @@ section .card {
 
   #me {
     margin: 30px;
-    border-radius: 20%;
-    height: 200px;
-    width: 175px;
+    border-radius: 10%;
+    height: 12.5%;
+    width: 12.5%;
     opacity: 0.6;
     align-items: center;
   }
