--- a/styles.scss
+++ b/styles.scss
@@ -256,6 +256,7 @@ font-size: #fff;
 
 .card-header {
   margin-bottom: auto;
+  padding: 5px;
 }
 
 .card-header p {
@@ -815,14 +816,14 @@ span.flickering-3 {
 
 
 // Contact form
-.contact form{
+ form{
 #contact input[type="text"],
 #contact input[type="email"],
 #contact input[type="tel"],
 #contact input[type="url"],
 #contact textarea,
 #contact button[type="submit"] {
-  font: 400 12px/16px "Fira Sans", Helvetica, Arial, sans-serif;
+  font: 400 12px/16px "Arial", sans-serif;
   }
 
 }
