--- a/styles.scss
+++ b/styles.scss
@@ -120,7 +120,7 @@ font-size: #fff;
     position: left;
     display: flex;
     font-family: Arial, Helvetica, sans-serif; 
-    width: 150em;
+    width: 200em;
     margin: 0 auto;
     border-right: 2px solid rgba(255,255,255,.75);
     font-size: 100%;
@@ -129,7 +129,15 @@ font-size: #fff;
     overflow: hidden;
     transform: translateY(-50%);    
     max-width: 85%;
+    padding: 10px;
 }
+
+// Potentially wrap to solve typing text issue?
+// .wrap {position:relative;
+//   width:100%;
+//   height:100%;
+//   overflow:hidden;
+// }
 
 /* Animation */
 #anim-typewriter{
@@ -138,7 +146,7 @@ font-size: #fff;
 }
 @keyframes typewriter {
   from{width: 0;}
-  to{width: 150em;}
+  to{width: 200em;}
 }
 @keyframes blinkTextCursor{
   from{border-right-color: rgba(255,255,255,.75);}
@@ -484,17 +492,16 @@ align-items: center;
   flex-direction: column;
   border-radius: 8px; 
   margin-bottom: 200px;
+  .background{
+    padding: 10px;
+    a {
+      color: white;
+      margin: 0 5px;
+    }
+  }
  }   
 
- // Snap Scroll 
- #container {
-  flex-basis: 50%;
-  max-height: 100vh;
-  overflow-y: scroll;
-  // border: 1px solid gray;
-  scroll-snap-type: y mandatory;
-  }
-}
+
 
 #me {
     margin: 30px;
@@ -824,6 +831,7 @@ span.flickering-3 {
 #contact textarea,
 #contact button[type="submit"] {
   font: 400 12px/16px "Arial", sans-serif;
+  padding: 10px;
   }
 
 }
@@ -933,6 +941,10 @@ fieldset {
 .languages-container {
     color: white;
     margin-bottom: 100px;
+    padding: 10px;
+    i {
+      margin: 0 5px;
+    }
 }
 
 
@@ -969,5 +981,6 @@ fieldset {
   counter-increment: gallery-cell;
 }
 
+}
 // Graph
 
