--- a/styles.scss
+++ b/styles.scss
@@ -117,7 +117,6 @@ font-size: #fff;
 
   
   .line {
-    position: left;
     display: flex;
     font-family: Arial, Helvetica, sans-serif; 
     width: 200em;
@@ -128,8 +127,9 @@ font-size: #fff;
     white-space: nowrap;
     overflow: hidden;
     transform: translateY(-50%);    
-    max-width: 85%;
+    max-width: 100%;
     padding: 10px;
+    text-align: center;
 }
 
 // Potentially wrap to solve typing text issue?
