--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ div.responsive {
 .line {
   display: flex;
   font-family: Arial, Helvetica, sans-serif;
-  width: 200em;
+  width: 120em;
   margin: 0 auto;
   border-right: 2px solid rgba(255, 255, 255, 0.75);
   font-size: 100%;
@@ -122,7 +122,7 @@ div.responsive {
   overflow: hidden;
   transform: translateY(-50%);
   max-width: 100%;
-  padding: 10px;
+  padding: 60 20 20 80px;
   text-align: center;
 }
 
@@ -136,7 +136,7 @@ div.responsive {
     width: 0;
   }
   to {
-    width: 200em;
+    width: 120em;
   }
 }
 @keyframes blinkTextCursor {
