--- a/styles.scss
+++ b/styles.scss
@@ -119,7 +119,7 @@ font-size: #fff;
   .line {
     display: flex;
     font-family: Arial, Helvetica, sans-serif; 
-    width: 200em;
+    width: 120em;
     margin: 0 auto;
     border-right: 2px solid rgba(255,255,255,.75);
     font-size: 100%;
@@ -128,7 +128,7 @@ font-size: #fff;
     overflow: hidden;
     transform: translateY(-50%);    
     max-width: 100%;
-    padding: 10px;
+    padding: 60 20 20 80px;
     text-align: center;
 }
 
@@ -146,7 +146,7 @@ font-size: #fff;
 }
 @keyframes typewriter {
   from{width: 0;}
-  to{width: 200em;}
+  to{width: 120em;}
 }
 @keyframes blinkTextCursor{
   from{border-right-color: rgba(255,255,255,.75);}
