--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -327,7 +327,9 @@
   .projects__img img:hover{
     transform: scale(1.1);
   }
-  
+  .projects__para{
+    color: var(--first-color);
+  }
   /* ===== CONTACT =====*/
 
   .contact__input{
